# SailFFish

./: CMakeLists.txt  CMakeLists_v1.1.txt  README.md  SailFFish.pro  main.cpp
Tests/: Test_1D.h  Test_2D.h  Test_3D.h  Test_3DV.h  Test_Functions.h  Test_Vortex_Rings.h
src/: CMakeLists.txt  CMakeLists_ext.txt  CMakeLists_int.txt  SailFFish.h  SailFFish_Math_Types.h
src/DataTypes/: DataType_Base.cpp  DataType_Base.h  DataType_CUDA.cpp  DataType_CUDA.h  DataType_FFTW.cpp  DataType_FFTW.h  DataType_MKL.cpp  DataType_MKL.h  DataType_VkFFT.cpp  DataType_VkFFT.h
src/Solvers/: Dirichlet_Solver.cpp  Dirichlet_Solver.h  Export_Grid.cpp  Greens_Functions.h  Neumann_Solver.cpp  Neumann_Solver.h  Periodic_Solver.cpp  Periodic_Solver.h  Solver_Base.cpp  Solver_Base.h  Solvers.h  Special_functions.cpp  Unbounded_Solver.cpp  Unbounded_Solver.h
src/VPM_Solver/: CMakeLists.txt  VPM3D_cpu.cpp  VPM3D_cpu.h  VPM3D_cuda.cpp  VPM3D_cuda.h  VPM3D_kernels_cpu.h  VPM3D_kernels_cuda.cuh  VPM3D_kernels_cuda.h  VPM3D_kernels_ocl.h  VPM3D_ocl.cpp  VPM3D_ocl.h  VPM_Solver.cpp  VPM_Solver.h
